# dpres-siptools-ng

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  requirements_github.txt  setup.cfg  sonar-project.properties
.github/workflows/: documentation.yml  python-build.yml
doc/: example_automated_sip_creation.py  example_manual_sip_creation.py
doc/result/: README
doc/source/: advanced.rst  api.rst  conf.py  examples.rst  faq.rst  index.rst  tutorial.rst  usage.rst
doc/source/examples/: example_automated_sip_creation.py  example_manual_sip_creation.py
include/rhel7/SPECS/: python3-dpres-siptools-ng.spec.m4
include/rhel9/SPECS/: python-dpres-siptools-ng.spec.m4
siptools_ng/: __init__.py  agent.py  digital_provenance.py  example.py  file.py  sip.py  sip_digital_object.py
tests/: agent_test.py  conftest.py  example_code_test.py  file_test.py  sip_digital_object_test.py  sip_test.py  test_agent.py  test_digital_provenance.py  test_example.py  test_sip.py  test_sip_digital_object.py  utils.py
tests/data/: imported_metadata.xml  valid_ead3.xml
tests/integration/: sip_generation_test.py  test_sip_generation.py
