[metadata]
name = dpres-siptools-ng
description = Library for creating Submission Information Packages (SIP) that comply to the specifications of national digital preservation services of Finland.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Digital-Preservation-Finland/dpres-siptools-ng
license = LGPL3
license_file = LICENSE
author = CSC — IT Center for Science
author_email = pas-support@csc.fi
platforms = linux
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
setup_requires =
    setuptools-scm
python_requires = >=3.6

[options.packages.find]
exclude = tests
